syntax = "proto3";

import "google/protobuf/empty.proto"; 
import "common.proto";

package organizations;

service OrganizationsService {
    rpc CreateDefault(google.protobuf.Empty) returns (ICreateDefaultOrganizationResponse) {}

    rpc FindOneById(common.IOnlyId) returns (IFindOneOrganizationResponse) {}

    rpc UpdateDocumentAims(IUpdateDocumentAimsDto) returns (common.IEmptyResponse) {}

    rpc UpdateDocumentTypes(IUpdateDocumentTypesDto) returns (common.IEmptyResponse) {}

    rpc UpdateAdministrativeDivisions(IUpdateAdministrativeDivisionsDto) returns (common.IEmptyResponse) {}
}

message IOrganization {
    string _id = 1;

    int32 __v = 2;

    repeated IDocumentAim documentAims = 3;

    repeated IDocumentType documentTypes = 4;

    repeated IAdministrativeDivision administrativeDivisions = 5;
}

message ICreateDefaultOrganizationResponse {
    oneof response {
        IOrganization data = 1;

        common.IHttpError error = 2;
    }
}

message IDocumentAim {
    string _id = 1;

    int32 __v = 2;

    string value = 3;
}

message IDocumentType {
    string _id = 1;
    
    int32 __v = 2;

    string value = 3;
}

message IAdministrativeDivision {
    string _id = 1;
    
    int32 __v = 2;

    string title = 3;

    repeated IPost posts = 4;
}

message IPost {
    string _id = 1;
    
    int32 __v = 2;

    string title = 3;
}

message IFindOneOrganizationResponse {
    oneof response {
        IOrganization data = 1;

        common.IHttpError error = 2;
    }
}

message IUpdateDocumentAimsDto {
    string organizationId = 1;

    repeated IDocumentAim documentAims = 2;
}

message IUpdateDocumentTypesDto {
    string organizationId = 1;

    repeated IDocumentType documentTypes = 2;
}

message IUpdateAdministrativeDivisionsDto {
    string organizationId = 1;

    repeated IAdministrativeDivision administrativeDivisions = 2;
}